@@ -9,6 +9,7 @@ V.Next
 - [PATCH] Fix APPLICATION_CANCELLED by handling back button press (#1725)
 - [PATCH] Added Base64 encode for the AuthorizationRequest state parameter (#1750)
 - [PATCH] Fix missing authority_url when creating the authority audience (#1753)
+- [PATCH] Fix msal failing tests due to telemetry context
 
 Version 5.0.0
 ----------
